kubernetes/applications/grafana-exposure.yaml
#TODO: This is a sample manifest to expose Grafana using a LoadBalancer service.
# Ideally exposes logs and metrics dashboards to the LAN, but can be used as a template for other services as well.
apiVersion: v1
kind: Service
metadata:
  name: grafana-loadbalancer-exposure
  namespace: monitoring
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.50.244"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
